Fix rollup arrows on error titleboxes under aileron
The arrow overlaps with the title text and are the darker version of the
sprite which clashes pretty badly with the error's red background.
Avoid the overlap (the same way the rest of the titlebox titles do) and
use the lighter sprite that aileron uses elsewhere.  The error box
styles were simply incomplete in 4147adb.

--- a/share/html/NoAuth/css/aileron/forms.css
+++ b/share/html/NoAuth/css/aileron/forms.css
@@ -68,7 +68,6 @@ div.results .titlebox-title .left {
 div.error .titlebox-title span.left {
     border: none;
     border-right: 2px solid #b00;
-    padding-left: 0.75em;
 }
 
 div.error .titlebox-content {
@@ -77,3 +76,5 @@ div.error .titlebox-content {
     border-right: 2px solid #a00;
     background-color: #fcc;
 }
+
+div.error .titlebox-title .widget a { background-position: center -7px; }
